modules/web/js/tests/resources/failing/fp-type-mismatch2-negative.bal
function test1()(boolean) {
     function (string, int)(boolean) foo = function(string x, boolean y)(boolean){
                                             return true;
                                           };
     return foo("this test fails at line", 2);
}
